--- a/advance_python_project_clg.ipynb
+++ b/advance_python_project_clg.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyP7ZeRL3uBZbOKZ7mRbxjW4",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JkVScA2ovs2t",
-        "outputId": "00657b31-de87-4a72-cf2b-3edb663b3662"
+        "outputId": "ecd09bce-e2a0-4ef1-b475-6c696f29f1b6"
       },
       "outputs": [
         {
@@ -56,7 +40,7 @@
             "Enter choice: 2\n",
             "Enter New Product ID: P101\n",
             "Enter Product Name: NOTEBOOK\n",
-            "Enter Price: 40\n",
+            "Enter Price: 50\n",
             "Enter Quantity: 100\n",
             "Product added successfully.\n",
             "\n",
@@ -71,9 +55,82 @@
             "8. Checkout (Dummy)\n",
             "9. Exit\n",
             "====================\n",
+            "Enter choice: 2\n",
+            "Enter New Product ID: P102\n",
+            "Enter Product Name: Pen (Pack of 5)\n",
+            "Enter Price: 30\n",
+            "Enter Quantity: 200\n",
+            "Product added successfully.\n",
+            "\n",
+            "====================\n",
+            "1. View Products\n",
+            "2. Add New Product\n",
+            "3. Add Item to Cart\n",
+            "4. View Cart\n",
+            "5. Update Quantity in Cart\n",
+            "6. Remove Item from Cart\n",
+            "7. Search Product\n",
+            "8. Checkout (Dummy)\n",
+            "9. Exit\n",
+            "====================\n",
+            "Enter choice: 2\n",
+            "Enter New Product ID: P103\n",
+            "Enter Product Name: Scientific Calculator\n",
+            "Enter Price: 850\n",
+            "Enter Quantity: 20\n",
+            "Product added successfully.\n",
+            "\n",
+            "====================\n",
+            "1. View Products\n",
+            "2. Add New Product\n",
+            "3. Add Item to Cart\n",
+            "4. View Cart\n",
+            "5. Update Quantity in Cart\n",
+            "6. Remove Item from Cart\n",
+            "7. Search Product\n",
+            "8. Checkout (Dummy)\n",
+            "9. Exit\n",
+            "====================\n",
+            "Enter choice: 2\n",
+            "Enter New Product ID: P104\n",
+            "Enter Product Name: USB Pendrive 32GB\n",
+            "Enter Price: 450\n",
+            "Enter Quantity: 50\n",
+            "Product added successfully.\n",
+            "\n",
+            "====================\n",
+            "1. View Products\n",
+            "2. Add New Product\n",
+            "3. Add Item to Cart\n",
+            "4. View Cart\n",
+            "5. Update Quantity in Cart\n",
+            "6. Remove Item from Cart\n",
+            "7. Search Product\n",
+            "8. Checkout (Dummy)\n",
+            "9. Exit\n",
+            "====================\n",
+            "Enter choice: 1\n",
+            "\n",
+            "Available Products:\n",
+            "ID: P101, Name: NOTEBOOK, Price: ₹50.00, Stock: 100\n",
+            "ID: P102, Name: Pen (Pack of 5), Price: ₹30.00, Stock: 200\n",
+            "ID: P103, Name: Scientific Calculator, Price: ₹850.00, Stock: 20\n",
+            "ID: P104, Name: USB Pendrive 32GB, Price: ₹450.00, Stock: 50\n",
+            "\n",
+            "====================\n",
+            "1. View Products\n",
+            "2. Add New Product\n",
+            "3. Add Item to Cart\n",
+            "4. View Cart\n",
+            "5. Update Quantity in Cart\n",
+            "6. Remove Item from Cart\n",
+            "7. Search Product\n",
+            "8. Checkout (Dummy)\n",
+            "9. Exit\n",
+            "====================\n",
             "Enter choice: 3\n",
             "Enter Product ID: P101\n",
-            "Enter Quantity: 50\n",
+            "Enter Quantity: 20\n",
             "Item added to cart.\n",
             "\n",
             "====================\n",
@@ -87,11 +144,89 @@
             "8. Checkout (Dummy)\n",
             "9. Exit\n",
             "====================\n",
-            "Enter choice: 4\n",
+            "Enter choice: 3\n",
+            "Enter Product ID: P104\n",
+            "Enter Quantity: 2\n",
+            "Item added to cart.\n",
             "\n",
-            "Your Cart:\n",
-            "Item: NOTEBOOK, Qty: 50, Price: ₹40.00, Subtotal: ₹2000.00\n",
-            "Grand Total: ₹2000.00\n",
+            "====================\n",
+            "1. View Products\n",
+            "2. Add New Product\n",
+            "3. Add Item to Cart\n",
+            "4. View Cart\n",
+            "5. Update Quantity in Cart\n",
+            "6. Remove Item from Cart\n",
+            "7. Search Product\n",
+            "8. Checkout (Dummy)\n",
+            "9. Exit\n",
+            "====================\n",
+            "Enter choice: 5\n",
+            "Enter Product ID: P104\n",
+            "Enter New Quantity: 5\n",
+            "Quantity updated.\n",
+            "\n",
+            "====================\n",
+            "1. View Products\n",
+            "2. Add New Product\n",
+            "3. Add Item to Cart\n",
+            "4. View Cart\n",
+            "5. Update Quantity in Cart\n",
+            "6. Remove Item from Cart\n",
+            "7. Search Product\n",
+            "8. Checkout (Dummy)\n",
+            "9. Exit\n",
+            "====================\n",
+            "Enter choice: 6\n",
+            "Enter Product ID to Remove: P104\n",
+            "Are you sure you want to remove P104? (y/n): Y\n",
+            "Item removed from cart.\n",
+            "\n",
+            "====================\n",
+            "1. View Products\n",
+            "2. Add New Product\n",
+            "3. Add Item to Cart\n",
+            "4. View Cart\n",
+            "5. Update Quantity in Cart\n",
+            "6. Remove Item from Cart\n",
+            "7. Search Product\n",
+            "8. Checkout (Dummy)\n",
+            "9. Exit\n",
+            "====================\n",
+            "Enter choice: 7\n",
+            "Enter keyword to search product name: P103\n",
+            "No matching products found.\n",
+            "\n",
+            "====================\n",
+            "1. View Products\n",
+            "2. Add New Product\n",
+            "3. Add Item to Cart\n",
+            "4. View Cart\n",
+            "5. Update Quantity in Cart\n",
+            "6. Remove Item from Cart\n",
+            "7. Search Product\n",
+            "8. Checkout (Dummy)\n",
+            "9. Exit\n",
+            "====================\n",
+            "Enter choice: 7\n",
+            "Enter keyword to search product name: P101\n",
+            "No matching products found.\n",
+            "\n",
+            "====================\n",
+            "1. View Products\n",
+            "2. Add New Product\n",
+            "3. Add Item to Cart\n",
+            "4. View Cart\n",
+            "5. Update Quantity in Cart\n",
+            "6. Remove Item from Cart\n",
+            "7. Search Product\n",
+            "8. Checkout (Dummy)\n",
+            "9. Exit\n",
+            "====================\n",
+            "Enter choice: 7\n",
+            "Enter keyword to search product name: NOTEBOOK\n",
+            "\n",
+            "Search Results:\n",
+            "ID: P101, Name: NOTEBOOK, Price: ₹50.00, Stock: 80\n",
             "\n",
             "====================\n",
             "1. View Products\n",
@@ -107,8 +242,8 @@
             "Enter choice: 8\n",
             "\n",
             "Your Cart:\n",
-            "Item: NOTEBOOK, Qty: 50, Price: ₹40.00, Subtotal: ₹2000.00\n",
-            "Grand Total: ₹2000.00\n",
+            "Item: NOTEBOOK, Qty: 20, Price: ₹50.00, Subtotal: ₹1000.00\n",
+            "Grand Total: ₹1000.00\n",
             "Thank you for shopping with us! (Simulated Checkout)\n",
             "\n",
             "====================\n",
@@ -121,7 +256,9 @@
             "7. Search Product\n",
             "8. Checkout (Dummy)\n",
             "9. Exit\n",
-            "====================\n"
+            "====================\n",
+            "Enter choice: 9\n",
+            "Exiting... Goodbye!\n"
           ]
         }
       ],
@@ -379,5 +516,21 @@
         "        print(\"\\nExiting due to user interruption. Goodbye!\")\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyP7ZeRL3uBZbOKZ7mRbxjW4",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
